[gd_scene load_steps=3 format=3 uid="uid://hq67rtu14odh"]

[ext_resource type="Script" path="res://tools/minigames/fishing/fish/fish_instancer.gd" id="1_j1ny3"]
[ext_resource type="PackedScene" uid="uid://b7p7lonykqjdv" path="res://tools/minigames/library/util/spawn_area.tscn" id="2_qvaq2"]

[node name="fish_instancer" type="Node3D"]
script = ExtResource("1_j1ny3")

[node name="SpawnAreaBottom2" parent="." instance=ExtResource("2_qvaq2")]
transform = Transform3D(1, -5.33139e-30, 2.91303e-38, 0, -3.49691e-07, -1, 6.66424e-31, 8, -4.37114e-08, 2.75012, -1.5, 0.0155117)

[node name="SpawnAreaRight" parent="." instance=ExtResource("2_qvaq2")]
transform = Transform3D(5, -6.66424e-31, 2.91303e-38, 0, -4.37114e-08, -1, 3.33212e-30, 1, -4.37114e-08, -0.25, -1.5, -3.5)

[node name="SpawnAreaLeft" parent="." instance=ExtResource("2_qvaq2")]
transform = Transform3D(5, -6.66424e-31, 2.91303e-38, 0, -4.37114e-08, -1, 3.33212e-30, 1, -4.37114e-08, -0.25, -1.5, 3.5)

[node name="SpawnAreaTop" parent="." instance=ExtResource("2_qvaq2")]
transform = Transform3D(1, -5.33139e-30, 2.91303e-38, 0, -3.49691e-07, -1, 6.66424e-31, 8, -4.37114e-08, -3.24742, -1.5, 0.0155117)
